<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Money</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="app_select_date">请点击选择账目年月</string>
    <string name="app_date" tools:ignore="TypographyDashes">2020-03-03</string>
    <string name="app_money">+2100.000</string>
    <string name="app_text">数据</string>

    <string name="app_tip">提示</string>
    <string name="app_yes">确定</string>
    <string name="app_no">取消</string>

    <string name="app_abnormal_data">数据异常</string>
    <string name="app_no_data">无数据</string>

    <string name="delete_text">确定要删除吗？</string>
    <string name="delete_yes">删除成功</string>
    <string name="delete_no">删除失败</string>




    <string name="out">支出</string>
    <string name="in">收入</string>

    <string name="money">金额</string>
    <string name="money_hint">请输入金额…</string>
    <string name="date">日期</string>
    <string name="remark">备注</string>
    <string name="account">账户</string>
    <string name="remark_hint">请输入备注…</string>


    <string name="app_registered">注册</string>
    <string name="app_login">登录</string>

    <!-- 注册-->
    <string name="registered_pswd_confirm_hint">请输入确认密码</string>
    <string name="registered_username_hint">请输入用户名</string>
    <string name="registered_problem_hint">请输入密保问题</string>
    <string name="registered_answer_hint">请输入密保答案</string>
    <string name="registered_pswd_hint">请输入密码</string>
    <string name="registered_pswd_inconsistent">密码和确认密码不一致</string>
    <string name="registered_account_repeated">该账号已经被注册</string>
    <string name="registered_success">注册成功</string>

    <!-- 登录-->
    <string name="login_logging">登录中。。。</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_pswd_incorrect">您输入的密码有误</string>
    <string name="login_success">登录成功</string>


    <!-- 找回密码-->
    <string name="retrieve_password_title">找回密码</string>
    <string name="retrieve_password_unregistered">该账号尚未注册</string>
    <string name="retrieve_password_question_error">密保问题有误</string>
    <string name="retrieve_password_answer_error">密保答案有误</string>
    <string name="retrieve_password_success">已查询到您的密码</string>
    <string name="retrieve_password_display">您的密码为：%s</string>



    <!-- 备注-->
    <string name="submit_remark_title">请输入备注</string>

    <!-- 修改-->
    <string name="update_title">账目详情</string>
    <string name="update_category">类型</string>
    <string name="update_symbol_money">+</string>

    <!-- 查询-->
    <string name="rearch">查询</string>
    <string name="rearch_title">类型/金额/时间/账户/备注</string>

    <!-- 侧边栏Drawer -->
    <string name="drawer_login">立即登录/注册</string>
    <string name="drawer_mes">消息</string>
    <string name="drawer_remind">定时记账</string>
    <string name="drawer_budget">预算</string>
    <string name="drawer_export">导出账目</string>
    <string name="drawer_clear">数据库数据清除</string>
    <string name="drawer_set">设置</string>
    <string name="drawer_help">帮助</string>
    <string name="drawer_about">关于</string>
    <string name="drawer_exit">退出应用</string>

    <!-- 图表-->
    <string name="graph_num">0.00</string>
    <string name="graph_gone">***</string>
    <string name="graph_balance">结余</string>

    <!-- 修改密码-->
    <string name="modify_pw_one">请输入密码</string>
    <string name="modify_pw_two">请确认密码</string>

    <!-- 个人信息-->
    <string name="persoal_info_title">个人信息</string>
    <string name="persoal_info_modify_pw">修改密码</string>
    <string name="persoal_info_exit_user">退出账号</string>

    <!-- 定时记账-->
    <string name="remind_text_xml">提醒我记账</string>

    <!-- 设置预算-->
    <string name="add_budget_title">设置预算</string>

    <!-- 导出账目-->
    <string name="export_text_xml">导出数据</string>
    <string name="export_text_dialog">是否导出该账号所有的数据库记录？</string>

    <!-- 数据库数据清除 -->
    <string name="clear_text_xml">清除数据库数据</string>
    <string name="clear_text_dialog">是否清除该账号所有的数据库记录？</string>

    <!-- demo主页 -->
    <string name="demo_home_title">Demo主页</string>
    <string name="demo_tab_test">TabLayout样例</string>
    <string name="demo_rv_test">RecyclerView样例</string>
    <string name="demo_gr_test">RV的GR样例</string>
    <string name="demo_eventbus">EventBus样例</string>
    <string name="demo_retrofit">Retrofit样例</string>
    <string name="demo_go_other">跳转其他页面</string>
    <string name="demo_input_hint">请输入文字</string>
    <string name="demo_send_event">发送数据事件</string>
    <string name="demo_post">post请求</string>
    <string name="demo_get">get请求</string>
    <string name="demo_request_body">RequestBody请求</string>



    <!-- 退出应用 -->
    <string name="exit_pop">确定退出此应用吗？</string>
</resources>
