<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/result_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" />

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/post_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_post" />

    <Button
        android:id="@+id/get_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_get" />

    <Button
        android:id="@+id/request_body_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_request_body" />


</LinearLayout>