<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/tab_case_btn"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/color_FF6B6A"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/demo_tab_test"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />


        <Button
            android:id="@+id/rv_case_btn"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/color_FF6B6A"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/demo_rv_test"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/gr_case_btn"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/color_FF6B6A"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/demo_gr_test"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/eventbus_case_btn"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/color_FF6B6A"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/demo_eventbus"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/retrofit_btn"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/color_FF6B6A"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/demo_retrofit"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>
