<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/budget_id_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/budget_date_tv"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/app_date"
        android:textColor="@color/color_333333"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/budget_money_tv"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/app_money"
        android:textColor="@color/color_333333"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/budget_remarks_tv"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_weight="1"
        android:gravity="center"
        android:maxLength="6"
        android:text="@string/app_text"
        android:textColor="@color/color_333333"
        android:textSize="22sp" />

</LinearLayout>