<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/modify_pw_back_tv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_left"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/persoal_info_modify_pw"
            android:textColor="@color/color_333333"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#a3a3a3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_password" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/modify_pw_password_edit"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginStart="12dp"
                android:background="@null"
                android:hint="@string/modify_pw_one" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="35dp"
                android:background="#cccccc" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="19dp"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_password" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/modify_pw_password_two_edit"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginStart="12dp"
                android:background="@null"
                android:hint="@string/modify_pw_two" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="35dp"
                android:background="#cccccc" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/modify_pw_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="#fff"
        android:textColor="@color/color_333333"
        android:text="@string/app_yes"
        android:textSize="25sp" />

</LinearLayout>